<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context="com.example.android.justjava.MainActivity"
        android:background="@drawable/coffee_background">


        <EditText
            android:id="@+id/User_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="#FFFF"
            android:textColor="#FFFF"
            android:inputType="textCapWords"/>


        <TextView
            style="@style/HeaderText"
            android:text="@string/toppings"
            />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:buttonTint="#FFF"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:buttonTint="#FFF"/>

        <TextView
            style="@style/HeaderText"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:padding="4dp"
                android:text="-"
                />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="0"
                android:textSize="16sp"
                android:textColor="#FFFF"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:padding="4dp"
                android:text="+" />


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:padding="8dp"
            android:text="@string/order" />


    </LinearLayout>

</ScrollView>

